package com.projet_warriors.armes;


public class BouleDeFeu extends Sort {

    public BouleDeFeu() {
        super.nom = "boule de feu";
        super.forceAttaque = 7;
    }


}
