package com.projet_warriors.armes;


public class Eclair extends Sort {



    public Eclair() {
        super.nom = "eclair";
        super.forceAttaque = 2;
    }

}
