package com.projet_warriors.armes;

public class Massue extends Arme {


    public Massue() {
        super.nom = "massue";
        super.forceAttaque = 3 ;
    }

}
