@startuml

title __ARMES's Class Diagram__\n

  namespace com.projet_warriors {
    namespace armes {
      class com.projet_warriors.armes.Arme {
          # forceAttaque : int
          # nom : String
          + Arme()
          + getForceAttaque()
          + getNom()
          + interact()
          + setForceAttaque()
          + setNom()
          + toString()
      }
    }
  }
  

  namespace com.projet_warriors {
    namespace armes {
      class com.projet_warriors.armes.BouleDeFeu {
          + BouleDeFeu()
      }
    }
  }
  

  namespace com.projet_warriors {
    namespace armes {
      class com.projet_warriors.armes.Eclair {
          + Eclair()
      }
    }
  }
  

  namespace com.projet_warriors {
    namespace armes {
      class com.projet_warriors.armes.Epee {
          + Epee()
      }
    }
  }
  

  namespace com.projet_warriors {
    namespace armes {
      class com.projet_warriors.armes.Massue {
          + Massue()
      }
    }
  }
  

  namespace com.projet_warriors {
    namespace armes {
      class com.projet_warriors.armes.Sort {
          # forceAttaque : int
          # nom : String
          + Sort()
          + getForceAttaque()
          + getNom()
          + interact()
          + setForceAttaque()
          + setNom()
          + toString()
      }
    }
  }
  

  com.projet_warriors.armes.Arme .up.|> com.projet_warriors.Case
  com.projet_warriors.armes.BouleDeFeu -up-|> com.projet_warriors.armes.Sort
  com.projet_warriors.armes.Eclair -up-|> com.projet_warriors.armes.Sort
  com.projet_warriors.armes.Epee -up-|> com.projet_warriors.armes.Arme
  com.projet_warriors.armes.Massue -up-|> com.projet_warriors.armes.Arme
  com.projet_warriors.armes.Sort .up.|> com.projet_warriors.Case


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
